<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Cinema</string>

    // Messenger
    <string name="registration_failed">Đăng ký thất bại</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="blank_email">Hãy nhập email của bạn</string>
    <string name="send_email_success">Gửi thành công, hãy kiểm tra email của bạn</string>
    <string name="send_email_failure">Gửi thất bại, hãy kiểm tra lại email đã nhập</string>

    // notify
    <string name="notify_retype_email">Hãy nhập lại email của bạn</string>
    <string name="notify_send_request_reset_password_success">Gửi yêu cầu đặt lại mật khẩu thành công, vui lòng kiểm tra thông báo trong email</string>
    <string name="notify_send_request_reset_password_fail">Gửi yêu cầu đặt lại mật khẩu thất bại</string>
    <string name="notify_login_fail">Đăng nhập thất bại, vui lòng thử lại</string>
    <string name="notify_register_fail">Đăng ký thất bại, vui lòng thử lại</string>

    // Layout Login, Register, ForgotPassword
    <string name="sign_in">Đăng Nhập</string>
    <string name="sign_in_account">ĐĂNG NHẬP TÀI KHOẢN</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="sign_up_account">ĐĂNG KÝ TÀI KHOẢN</string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="admin_role">Quản trị viên</string>
    <string name="user_role">Người dùng</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="send_again_password">GỬI LẠI MẬT KHẨU</string>

    <string name="role_client">Client</string>
    <string name="role_admin">Admin</string>


    // Layout User Home
    <string name="search_name_moive">Tên phim</string>
    <string name="all_movie">Tất cả phim</string>
    <string name="outstanding_movie">Nổi bật</string>

    // Layout Movie Detail
    <string name="movie_genre">Thể loại phim: </string>
    <string name="movie_release_date">Ngày khởi chiếu: </string>
    <string name="movie_ticket_price">Giá vé: </string>
    <string name="button_booking">ĐẶT VÉ</string>
    <string name="movie_name">Tên phim: </string>


    // other
    // Tab Menu Admin
    <string name="home_admin">Thể loại</string>
    <string name="food_admin">Đồ ăn/uống</string>
    <string name="movie_admin">Phim</string>
    <string name="history_admin">Lịch sử</string>
    <string name="manage_admin">Quản lý</string>

    // Tab Menu User
    <string name="home_user">Trang chủ</string>
    <string name="history_booking_user">Lịch sử đặt vé</string>
    <string name="account_user">Tài khoản</string>

    // Tab Menu User
    <string name="admin_movie">Phim</string>
    <string name="admin_genre">Thể loại</string>
    <string name="admin_product">Đồ ăn/uống</string>
    <string name="admin_history">Lịch sử</string>
    <string name="admin_manage">Quản lý</string>

    // Module Login
    <string name="nav_account">Account</string>
    <string name="nav_my_profile">My profile</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="change_password">Change Password</string>

    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>


    // Tab Menu
    <string name="home">Đồ ăn</string>
    <string name="cart">Giỏ hàng</string>
    <string name="feedback">Phản hồi</string>
    <string name="contact">Liên hệ</string>
    <string name="order">Lịch sử</string>

    // action
    <string name="action_ok">Đồng ý</string>
    <string name="action_cancel">Hủy bỏ</string>

    // dialog
    <string name="waiting_message">Vui lòng đợi…</string>

    // msg
    <string name="error_not_connect_to_internet">Vui lòng kiểm tra kết nối mạng của bạn</string>
    <string name="msg_exit_app">Bạn có muốn thoát ứng dụng?</string>

    <string name="category_title">Danh mục</string>
    <string name="food_suggest">Gợi ý món ăn</string>
    <string name="food_detail_title">Chi tiết món ăn</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="added_to_cart">Đã thêm vào giỏ hàng</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="send_feedback_success">Gửi phản hồi thành công!</string>
    <string name="name_require">Vui lòng nhập Họ và Tên</string>
    <string name="comment_require">Vui lòng nhập phản hồi của bạn</string>
    <string name="order_cart">Đặt Hàng</string>
    <string name="total">Tổng Tiền:</string>
    <string name="confirm_delete_food">Xác nhận xóa khỏi giỏ hàng</string>
    <string name="message_delete_food">Bạn có chắc chắn muốn xóa món ăn này không?</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="address_delivery">Địa chỉ giao hàng</string>
    <string name="message_enter_infor_order">Vui lòng điền đầy đủ thông tin giao hàng</string>
    <string name="hint_search_name">Tên món ăn…</string>
    <string name="price_label">Giá:</string>
    <string name="description_label">Mô tả</string>
    <string name="more_image_label">Một số hình ảnh khác</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_method_cash">Tiền mặt</string>
    <string name="label_sub">-</string>
    <string name="label_add">+</string>
    <string name="label_quantity_0">0</string>
    <string name="label_price_0">0 VNĐ</string>

    <string name="feedback_name">Họ và Tên (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Số điện thoại</string>
    <string name="feedback_comment">Bình luận (*)</string>
    <string name="send_feedback">Gửi phản hồi</string>

    <string name="label_id">Mã:</string>
    <string name="label_movie_name">Tên phim:</string>
    <string name="label_release_date">Khởi chiếu:</string>
    <string name="label_room">Phòng chiếu:</string>
    <string name="label_showtime">Giờ chiếu:</string>
    <string name="label_ticket_quantity">Số lượng vé:</string>
    <string name="label_selected_seat">Ghế đã chọn:</string>
    <string name="label_product">Đồ ăn/uống:</string>
    <string name="label_payment_method">Thanh toán:</string>
    <string name="label_total_payment">Tổng tiền:</string>

    // confirm booking
    <string name="label_cf_room">Phòng chiếu</string>
    <string name="label_cf_showtime">Giờ chiếu</string>
    <string name="label_cf_screen">Màn hình</string>
    <string name="label_cf_select_product">Chọn sản phẩm</string>
    <string name="label_cf_payment_method">Chọn phương thức thanh toán</string>

    <string name="label_movie_description">Mô tả</string>
    <string name="label_movie_trailer">Xem trailer</string>
    <string name="label_movie_actor">Diễn viên</string>
    <string name="label_movie_director">Đạo diễn</string>

    <string name="revenue_stt">Stt:</string>
    <string name="revenue">Doanh thu</string>

    <string name="label_change_password">Đổi mật khẩu</string>
    <string name="label_logout">Đăng xuất</string>
    <string name="label_revenue">Thống kê doanh thu</string>

    <string name="status_new">Chờ xử lý</string>
    <string name="status_cancel">Hủy đơn hàng</string>
    <string name="status_process">Đang giao hàng</string>
    <string name="status_success">Thành công</string>
    <string name="status_fail">Thất bại</string>
    <string name="quantity">Số lượng: </string>
    <string name="list_food_order">Danh sách món ăn trong đơn hàng</string>


    <string name="msg_get_data_error">Lỗi đã xảy ra, vui lòng thử lại sau</string>
    <string name="msg_update_data_error">Lỗi đã xảy ra, vui lòng thử lại sau</string>
    <string name="msg_update_data_success">Cập nhật thành công</string>
    <string name="msg_add_data_success">Thêm thành công</string>
    <string name="msg_remove_data_success">Xóa thành công</string>
    <string name="msg_list_empty_and_add_first_genre">Đã thêm phần tử đầu tiên vào cơ sở dữ liệu</string>
    <string name="msg_volume_up_to_flash_on">Tăng âm lượng để bật đèn flash</string>


    <string name="msg_booking_ticket_success">Đặt vé thành công, vui lòng kiểm tra trong phần Lịch sử</string>

    <string name="msg_check_schedule">Phim không được chiếu trong phòng này hoặc khung thời gian này</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    // change password
    <string name="label_current_password">Mật khẩu hiện tại</string>
    <string name="label_new_password">Mật khẩu mới</string>
    <string name="label_confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="label_apply">ÁP DỤNG</string>

    // update, create genre role admin
    <string name="label_update_genre">Cập nhật thể loại phim</string>
    <string name="label_Add_genre">Thêm thể loại phim mới</string>
    <string name="label_enter_name">Nhập tên</string>
    <string name="label_enter_url_image">Nhập url ảnh</string>
    <string name="label_enter_description">Nhập mô tả</string>
    <string name="label_enter_trailer">Nhập uri trailer</string>

    <string name="label_enter_genre">Nhập thể loại phim</string>
    <string name="label_enter_director">Nhập tên đạo diễn phim</string>
    <string name="label_enter_actor">Nhập tên diễn viên</string>
    <string name="label_enter_release_date">Nhập ngày khởi chiếu</string>
    <string name="label_enter_duration">Nhập thời lượng phim</string>
    <string name="label_enter_evaluate">Nhập điểm đánh giá phim</string>
    <string name="label_enter_rating">Nhập đánh giá đối tượng phù hợp xem phim</string>
    <string name="label_enter_ticket_price">Nhập giá vé</string>
    <string name="label_enter_suggest">Nhập độ phổ biến</string>


    <string name="label_update_product">Cập nhật sản phẩm</string>
    <string name="label_add_product">Thêm sản phẩm</string>
    <string name="label_enter_price">Nhập giá</string>

    <string name="label_update_movie">Cập nhật Phim</string>
    <string name="label_add_movie">Thêm phim</string>

    // bottom sheet booking
    <string name="label_set_checked">Ghế đã chọn:</string>
    <string name="label_payment_method_bts">Thanh toán:</string>
    <string name="label_confirm_information">Xác nhận thông tin đặt vé</string>


    // dialog remove genre
    <string name="confirm_delete_genre">Xác nhận xóa thể loại phim </string>
    <string name="message_delete_genre">Bạn có chắc chắn muốn xóa thể loại phim này không?</string>
    <string name="delete">Xoá</string>
    <string name="cancel_delete">Hủy</string>

    <string name="confirm_delete_product">Xác nhận xóa sản phẩm </string>
    <string name="message_delete_product">Bạn có chắc chắn muốn xóa sản phẩm này không?</string>

    <string name="confirm_delete_movie">Xác nhận xóa phim </string>
    <string name="message_delete_movie">Bạn có chắc chắn muốn xóa phim này không?</string>


    <string name="invalid_email">Email không hợp lệ</string>
    <string name="invalid_password">Mật khẩu không hợp lệ</string>

</resources>
