<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.statistical.StatisticalActivity">

    <TextView
        android:id="@+id/label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/revenue"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xxnormal"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:background="@drawable/bg_white_shape_border_green"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/revenue_stt"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="@dimen/define_dimen_1"
            android:layout_height="@dimen/define_dimen_12"
            android:layout_gravity="center"
            android:background="@color/green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/movie_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="@dimen/define_dimen_1"
            android:layout_height="@dimen/define_dimen_12"
            android:layout_gravity="center"
            android:background="@color/green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/label_ticket_quantity"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="@dimen/define_dimen_1"
            android:layout_height="@dimen/define_dimen_12"
            android:layout_gravity="center"
            android:background="@color/green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/label_total_payment"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_revenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5" />

</LinearLayout>